    Seconded: Steve Langasek <vorlon@debian.org>
    Seconded: Charles Plessy <plessy@debian.org>
    Closes: #621479
  * copyright-format: Fix URL for the Eiffel Forum License.
    Reported by Thomas Preud'homme, patch by Charles Plessy.
    Closes: #623050
  * copyright-format: Update SPDX link to point to the SPDX license registry.
    Patch by Charles Plessy.  Closes: #628540
  * Policy: Clarify that 'machine-extractable' referer the copyright
    files (12.5)
    Wording:  Charles Plessy <plessy@debian.org>
    Seconded: Bill Allombert <ballombe@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #617516
  * copyright-format: remove drivers from abstract and useless appendix
    Wording: Lars Wirzenius <liw@liw.fi>
    Seconded: Charles Plessy <plessy@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Closes: #640735
  * copyright-format: Fix syntax of examples.
    Proposed by: Charles Plessy <plessy@debian.org>
    Wording: Jonathan Nieder <jrnieder@gmail.com>
    Closes: #649674
  * copyright-format: Clarify specification of multiple license exception:
    Wording: Steve Langasek <vorlon@debian.org>
    Seconded: Craig Small <csmall@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Seconded: Jakub Wilk <jwilk@debian.org>
    Seconded: Jonas Smedegaard <dr@jones.dk>
    Closes: #633797
  * copyright-format: Specify URL on www.debian.org
    Wording: Charles Plessy <plessy@debian.org>
    Seconded: David Prévot <taffit@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Closes: #640737
  * Perl policy: Document major version upgrade trigger
    Wording: Dominic Hargreaves <dom@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Niko Tyni <ntyni@debian.org>
    Seconded: Gregor Herrmann <gregoa@debian.org>
    Closes: #619275
  * Virtual: change ttf-japanese-{mincho, gothic} to
    fonts-japanese-{mincho, gothic}.
    Proposed by: Nobuhiro Iwamatsu <iwamatsu@nigauri.org>