@@ -36,6 +36,10 @@ debian-policy (3.9.3.0) UNRELEASED; urgency=low
     Closes: #623050
   * copyright-format: Update SPDX link to point to the SPDX license registry.
     Patch by Charles Plessy.  Closes: #628540
+  * copyright-format: Correct or add links to SPDX.
+    Wording: Charles Plessy <plessy@debian.org>
+    Seconded: Gregor Herrmann <gregoa@debian.org>
+    Closes: #641071
   * Policy: Clarify that 'machine-extractable' referer the copyright
     files (12.5)
     Wording:  Charles Plessy <plessy@debian.org>
@@ -81,7 +85,7 @@ debian-policy (3.9.3.0) UNRELEASED; urgency=low
     Seconded: Raphael Hertzog <hertzog@debian.org>
     Closes: #637614
 
- -- Bill Allombert <ballombe@debian.org>  Mon, 28 Nov 2011 12:55:12 +0100
+ -- Bill Allombert <ballombe@debian.org>  Wed, 30 Nov 2011 22:27:54 +0100
 
 debian-policy (3.9.2.0) unstable; urgency=low
 
